@@ -1,0 +1,12 @@
+<configure
+   xmlns="http://namespaces.zope.org/zope"
+   xmlns:five="http://namespaces.zope.org/five"
+   >
+
+  <adapter
+      factory=".atcttool.ATCTToolXMLAdapter"
+      provides="Products.GenericSetup.interfaces.IBody"
+      for="Products.ATContentTypes.interface.IATCTTool
+           Products.GenericSetup.interfaces.ISetupEnviron"
+      />
+</configure>
